--- a/style.css
+++ b/style.css
@@ -345,6 +345,7 @@ nav .fa-solid{
         top: 0;
         right: -200px;
         width: 180px;
+        width: 150px;
         height: 100vh;
         padding-top: 50px;
         z-index: 2;
